k8s/gitea/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-https-redirect@kubernetescrd'
spec:
  ingressClassName: traefik
  rules:
    - host: gitea.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  name: http
  tls:
    - hosts:
        - gitea.tryrocket.cloud
      secretName: gitea-tryrocket-cloud-production-tls
